# keboola-eshop

./: .env.example  .gitignore  README.md  SKILLS.md  package-lock.json  package.json  pyproject.toml
.cursor/skills/dataapp-deployment/: SKILL.md  reference.md
keboola_eshop/: app.py  kbc.py
src/: kbc.js  server.js
